plugins {
    id 'net.neoforged.moddev' version '2.0.141'
    id 'com.diffplug.spotless' version '8.3.0'
    id 'io.freefair.lombok' version '9.2.0'
    id 'maven-publish'
    id 'com.gto.gtopublishgradleplugin' version '1.0.21'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', "${project.mod_id},registrylibtest"
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', "${project.mod_id},registrylibtest"
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', "${project.mod_id},registrylibtest"
        }

        data {
            type = 'clientData'
            programArguments.addAll '--mod', project.mod_id,
                    '--mod', 'registrylibtest',
                    '--all',
                    '--output', file('src/generated/resources/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources/registrylib'
    srcDir 'src/generated/resources/registrylibtest'
}

def releaseModsToml = layout.buildDirectory.file('generated/releaseResources/META-INF/neoforge.mods.toml')

tasks.register('generateReleaseModsToml') {
    group = 'build'
    description = 'Generates the library-only NeoForge metadata for published jars.'
    outputs.file(releaseModsToml)
    inputs.properties([
            mod_id                 : mod_id,
            mod_version            : mod_version,
            mod_name               : mod_name,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            mod_license            : mod_license,
            minecraft_version_range: minecraft_version_range,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
    ])

    doLast {
        def outputFile = releaseModsToml.get().asFile
        outputFile.parentFile.mkdirs()
        outputFile.setText("""modLoader="javafml"
loaderVersion="${loader_version_range}"
license="${mod_license}"
issueTrackerURL=""

[[mods]]
modId="${mod_id}"
version="${mod_version}"
displayName="${mod_name}"
authors="${mod_authors}"
description='''${mod_description}'''

[[dependencies.${mod_id}]]
modId="neoforge"
type="required"
versionRange="${neo_version_range}"
ordering="NONE"
side="BOTH"

[[dependencies.${mod_id}]]
modId="minecraft"
type="required"
versionRange="${minecraft_version_range}"
ordering="NONE"
side="BOTH"
""", 'UTF-8')
    }
}

jar {
    dependsOn(tasks.named('generateReleaseModsToml'))

    exclude 'META-INF/neoforge.mods.toml'
    exclude 'com/gto/registrylibtest/**'
    exclude 'registrylibtest/**'
    exclude 'assets/registrylibtest/**'
    exclude 'data/registrylibtest/**'
    exclude 'data/minecraft/tags/**'
    exclude '.cache/**'

    from(releaseModsToml) {
        into 'META-INF'
    }
}

def mainLibrarySources = fileTree('src/main/java/com/gto/registrylib') {
    include '**/*.java'
}

tasks.register('verifyNoRegistryLibTestLeaks') {
    group = 'verification'
    description = 'Fails the build if main library sources depend on registrylibtest classes that are excluded from the published jar.'
    inputs.files(mainLibrarySources)

    doLast {
        def offendingFiles = mainLibrarySources.files.findAll {
            it.getText('UTF-8').contains('com.gto.registrylibtest')
        }

        if (!offendingFiles.isEmpty()) {
            def formattedPaths = offendingFiles.collect {
                project.relativePath(it).replace('\\', '/')
            }
            throw new GradleException(
                    'Main library sources cannot depend on com.gto.registrylibtest because that package is excluded from the published jar:\n - '
                            + formattedPaths.join('\n - '))
        }
    }
}

tasks.named('compileJava') {
    dependsOn(tasks.named('verifyNoRegistryLibTestLeaks'))
}

tasks.register('verifyReleaseJarDoesNotContainRegistryLibTest') {
    group = 'verification'
    description = 'Fails the build if the published jar contains registrylibtest classes, metadata, or generated resources.'
    dependsOn(tasks.named('jar'))

    doLast {
        def jarFile = tasks.named('jar').get().archiveFile.get().asFile
        def forbiddenEntries = []

        zipTree(jarFile).matching {
            include 'com/gto/registrylibtest/**'
            include 'registrylibtest/**'
            include 'assets/registrylibtest/**'
            include 'data/registrylibtest/**'
            include 'data/minecraft/tags/**'
        }.visit { details ->
            if (!details.directory) {
                forbiddenEntries.add(details.relativePath.pathString)
            }
        }

        def modsToml = zipTree(jarFile).matching {
            include 'META-INF/neoforge.mods.toml'
        }.singleFile

        if (modsToml.getText('UTF-8').contains('registrylibtest')) {
            forbiddenEntries.add('META-INF/neoforge.mods.toml contains registrylibtest')
        }

        if (!forbiddenEntries.isEmpty()) {
            throw new GradleException(
                    'Release jar must not contain registrylibtest content:\n - '
                            + forbiddenEntries.sort().join('\n - '))
        }
    }
}

tasks.register('verifyPublicationMetadataDoesNotUseFlatDirFastcollection') {
    group = 'verification'
    description = 'Fails the build if published metadata still points at the flatDir fastcollection dependency.'
    dependsOn(tasks.named('generatePomFileForMavenJavaPublication'))
    dependsOn(tasks.named('generateMetadataFileForMavenJavaPublication'))

    doLast {
        def publicationDir = layout.buildDirectory.dir('publications/mavenJava').get().asFile
        def pomFile = new File(publicationDir, 'pom-default.xml')
        def moduleFile = new File(publicationDir, 'module.json')
        def pomText = pomFile.getText('UTF-8')
        def moduleText = moduleFile.getText('UTF-8')

        def badPom = pomText.contains('<groupId>dev</groupId>') && pomText.contains('<artifactId>fastcollection-1.0</artifactId>')
        def badModule = moduleText.contains('"module": "fastcollection-1.0"')

        if (badPom || badModule) {
            throw new GradleException(
                    'Published metadata still references the flatDir fastcollection dependency.')
        }
    }
}

tasks.named('check') {
    dependsOn(tasks.named('verifyReleaseJarDoesNotContainRegistryLibTest'))
    dependsOn(tasks.named('verifyPublicationMetadataDoesNotUseFlatDirFastcollection'))
}

def releasePublishTaskNames = [
        'gtoPublish',
        'gtoPublishMaven',
        'gtoPublishGithub',
        'gtoPublishCurseforge'
]

tasks.configureEach {
    if (name in releasePublishTaskNames) {
        dependsOn(tasks.named('verifyReleaseJarDoesNotContainRegistryLibTest'))
        dependsOn(tasks.named('verifyPublicationMetadataDoesNotUseFlatDirFastcollection'))
    }
}

repositories {
    mavenLocal()
    maven {
        url = 'https://maven.gtodyssey.com/releases'
    }
    flatDir {
        dir "libs"
    }
    mavenCentral()
}

dependencies {
    compileOnly("org.projectlombok:lombok:1.18.44")
    annotationProcessor("org.projectlombok:lombok:1.18.44")

    implementation("com.fast.fastcollection:fastcollection-neoforge-26.1:1.0.0")

    testImplementation("org.junit.jupiter:junit-jupiter:6.0.1")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
    useJUnitPlatform()
}

spotless {
    java {
        googleJavaFormat('1.35.0')
        removeUnusedImports()
        cleanthat()
            .version('2.21')
            .addMutator('UnnecessaryFullyQualifiedName')
            .includeDraft(false)
        target 'src/**/*.java'
    }
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties + [project: project]
    }
}

spotless {
    encoding 'UTF-8'

    format 'misc', {
        target '.gitignore'

        trimTrailingWhitespace()
        leadingTabsToSpaces()
        endWithNewline()
    }
    java {
        target 'src/main/java/**/*.java', 'src/test/java/**/*.java'

        def orderFile = file("$rootDir/spotless/spotless.importorder")
        def formatFile = file("$rootDir/spotless/spotless.eclipseformat.xml")

        toggleOffOn()
        importOrderFile(orderFile)
        endWithNewline()
        eclipse('4.31').configFile(formatFile)
    }
}

tasks.withType(GenerateModuleMetadata).configureEach {
    suppressedValidationErrors.add('dependencies-without-versions')
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId = mod_group_id
            artifactId = mod_id
        }
    }
    repositories {
        maven {
            name = 'gtodysseyRepository'
            url = 'https://maven.gtodyssey.com/releases'
            credentials {
                username = findProperty('gtodysseyRepositoryUsername') ?: ''
                password = findProperty('gtodysseyRepositoryPassword') ?: ''
            }
        }
    }
}

gtoPublish {
    publishMaven      = true
    publishGithub     = true
    publishCurseforge = true
    mavenRepoUrl      = 'releases'
    minecraftVersion      = '26.1.2'
    githubRepo        = 'GregTech-Odyssey/RegistryLib'
    modLoader         = 'NeoForge'
    curseforgeProjectId   = '1486427'
    curseforgeJavaVersion = 'Java 25'
}
